fix: display on mobile screen

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $blue: #49b0ff;
 $tablet: 768px;
+$laptop-s: 1024px;
 $laptop: 1440px;
 
 @mixin free-space { padding: 5px 5vw; }
