--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,6 +50,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
   @include free-space;
   @media (min-width: $tablet) { @include free-space-tablet; }
   @media (min-width: $laptop) { @include free-space-laptop; }
@@ -122,7 +123,6 @@ mark {
 }
 
 .content {
-  align-items: center;
   display: none;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -130,6 +130,7 @@ mark {
   padding-top: 75px;
   width: 100%;
   @media (min-width: $tablet) {
+    align-items: center;
     flex-direction: row;
     height: 70vh;
     justify-content: space-between;
@@ -165,10 +166,12 @@ mark {
 }
 
 .essence {
-  align-self: flex-start;
   font-size: 1rem;
   font-weight: 300;
-  flex-grow: 2;
+  @media (min-width: $tablet) {
+    align-self: flex-start;
+    flex-grow: 2;
+  }
   &__header {
     font-size: 2em;
     font-weight: 600;
@@ -176,7 +179,7 @@ mark {
     position: relative;
     &::after {
       content: '';
-      border: 1px;
+      border: 2px;
       border-bottom-style: solid;
       width: 100%;
       bottom: -15px;
@@ -202,9 +205,21 @@ mark {
     box-sizing: content-box;
     line-height: 1.5em;
     margin: 5px;
-    padding-top: 23%;
+    padding-top: 30%;
     position: relative;
-    width: 23%;
+    width: 98%;
+    @media (min-width: $tablet) {
+      padding-top: 45%;
+      width: 45%;
+    }
+    @media (min-width: $laptop-s) {
+      padding-top: 31%;
+      width: 31%;
+    }
+    @media (min-width: $laptop) {
+      padding-top: 22%;
+      width: 22%;
+    }
     span {
       left: 50%;
       position: absolute;
@@ -227,7 +242,9 @@ mark {
   }
   &__item {
     padding: 1em 0;
-    width: 50%;
+    @media (min-width: $laptop-s) {
+      width: 50%;
+    }
     &::after {
       font-family: 'Font Awesome 5 Free';
       font-weight: 900;
@@ -246,20 +263,34 @@ mark {
   }
   &__form {
     line-height: 2em;
-    width: 90%;
+    @media (min-width: $tablet) {
+      width: 90%;
+    }
     &-item {
+      display: inline-block;
+      @media (min-width: $tablet) {
+        display: block;
+      }
       input, textarea {
         background-color: rgba(255,255,255,0);
         border: 1px solid $blue;
         float: right;
         height: 2.5em;
-        width: 70%;
+        width: 100%;
+        @media (min-width: $tablet) {
+          width: 55%;
+        }
+        @media (min-width: $laptop-s) {
+          width: 70%;
+        }
       }
     }
     &-footer {
-      display: flex;
-      justify-content: space-between;
       margin-top: 2em;
+      @media (min-width: $laptop-s) {
+        display: flex;
+        justify-content: space-between;
+      }
       input[type="submit"] {
         background-color: $blue;
         border: none;
@@ -275,7 +306,9 @@ mark {
     &-consent {
       font-size: 0.7em;
       line-height: 1.2em;
-      width: 50%;
+      @media (min-width: $laptop-s) {
+        width: 50%;
+      }
       p {
         display: flex;
         align-items: center;
